[project]
name = "heuragenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.6.0",
    "azure-identity==1.21.0",
    "bottleneck==1.3.6",
    "dill==0.3.9",
    "llvmlite>=0.44.0",
    "loguru>=0.7.3",
    "matplotlib==3.8.4",
    "networkx==2.8.8",
    "numpy==1.26.4",
    "openai==1.34.0",
    "ortools==9.12.4544",
    "pandas==2.2.1",
    "rich>=13.9.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "streamlit==1.39.0",
    "transformers==4.51.3",
    "tsplib95==0.7.1",
]
